# wg-identity-authentication

./: .gitignore  .prettierrc  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
reference-implementations/ICRC-21/: .gitignore  Cargo.toml  README.md  dfx.json  icrc21_reference_canister.did
reference-implementations/ICRC-21/src/: icrc21_types.rs  lib.rs
topics/: attribute-sharing.md  canister-based-wallet-architects.md  consent-msg.md  dapp-wallet-msg.md  icrc88_mnemonic_phrase_signers.md  icrcX_mnemonic_phrase_signers.md  icrc_112_batch_call_canister.md  icrc_112_batch_canister_call.md  icrc_112_multiple_canister_call.md  icrc_114_validate_batch_call.md  icrc_114_validation_canister.md  icrc_146_cross_chain_json_rpc.md  icrc_21_consent_msg.md  icrc_25_signer_interaction_standard.md  icrc_27_accounts.md  icrc_27_get_accounts.md  icrc_27_get_icrc_1_accounts.md  icrc_27_get_icrc_1_subaccounts.md  icrc_28_trusted_origins.md  icrc_29_window_post_message_transport.md  icrc_2X_wallet_permissions.md  icrc_2x_batch_calling  icrc_2x_canister_calls.md  icrc_31_get_principals.md  icrc_31_list_identities.md  icrc_32_sign_challenge.md  icrc_33_call_canister.md  icrc_34_delegation.md  icrc_34_get_delegation.md  icrc_34_get_global_delegation.md  icrc_35_webpage_apis.md  icrc_39_batch_calling.md  icrc_3x_get_delegation.md  icrc_3x_managed_identities.md  icrc_49_call_canister.md  icrc_57_get_session_delegation.md  icrc_88_mnemonic_phrase_signers.md  icrc_94_multi_injected_provider_discovery.md  icrc_95_derivationorigin.md  icrc_X_multiple_canister_call.md  (+7 more)
(+121 files in other folders)
