[package]
name = "icrc21_reference_canister"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
serde = "1"
serde_bytes = "0.11.14"
itertools = "0.12.1"

[dev-dependencies]
candid_parser = "0.1.4"
